# http-MCP

./: Dockerfile  README.md  __init__.py  docker-compose.yml  pyproject.toml  requirements-vercel.txt  requirements.txt  server_sse.py  server_stdio.py  vercel.json
api/: index.py  mcp.py  oauth.py  sse.py
