[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hello-mcp-server"
version = "1.0.0"
description = "MCP server that responds with 4 when you say hello"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastmcp>=0.1.0",
]

[project.scripts]
hello-mcp-server = "hello_mcp:main"